force-app/main/default/objects/Custom_Label__c/Custom_Label__c.object-meta.xml
<CustomObject>
    <description>Overridden custom labels, to be used for translations where the translation workbench wont  work</description>
    <label>Custom Label</label>
    <nameField>
        <label>Custom Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>