force-app/main/default/objects/Custom_Label__c/fields/Custom_Label_Value__c.field-meta.xml
<CustomField>
    <fullName>Custom_Label_Value__c</fullName>
    <description>The label value to be displayed on screen</description>
    <inlineHelpText>The label value to be displayed on screen</inlineHelpText>
    <label>Custom Label Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>