force-app/main/default/objects/Custom_Label__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>The language that the label is displayed in</description>
    <inlineHelpText>The language that the label is displayed in</inlineHelpText>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>ca</fullName>
            </value>
            <value>
                <fullName>nl</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>ru</fullName>
            </value>
            <value>
                <fullName>cn</fullName>
            </value>
            <value>
                <fullName>ar</fullName>
            </value>
            <value>
                <fullName>ae</fullName>
            </value>
            <value>
                <fullName>kr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>