force-app/main/default/objects/Custom_Label__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Allows to specify an order for those groups of labels that are suposed to be displayed as picklist options. For example, salutation labels or method of transport</description>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>