force-app/main/default/objects/Custom_Label__c/fields/Used_in_App__c.field-meta.xml
<CustomField>
    <fullName>Used_in_App__c</fullName>
    <label>Used in App</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HFS</fullName>
            </value>
            <value>
                <fullName>Brand Portal</fullName>
            </value>
            <value>
                <fullName>Daily Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>