force-app/main/default/objects/Custom_Label__c/fields/Used_on_page__c.field-meta.xml
<CustomField>
    <fullName>Used_on_page__c</fullName>
    <label>Used on page</label>
    <length>100</length>
    <type>Text</type>
</CustomField>