force-app/main/default/objects/Custom_Label__c/listViews/All_Labels.listView-meta.xml
<ListView>
    <fullName>All_Labels</fullName>
    <columns>NAME</columns>
    <columns>Custom_Label_Value__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Labels</label>
    <language>en_US</language>
</ListView>